--- a/Chat-server/package.json
+++ b/Chat-server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
