--- a/Chat-client/package.json
+++ b/Chat-client/package.json
@@ -25,6 +25,8 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
