--- a/Chat-server/package.json
+++ b/Chat-server/package.json
@@ -2,16 +2,25 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "mongoose": "^8.7.1",
+    "socket.io": "^4.7.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.7.3",
+    "nodemon": "^3.1.4",
+    "sinon": "^19.0.2"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "devstart": "nodemon server.js"
+    "test": "mocha",
+    "devstart": "nodemon server.js",
+    "swagger": "node swagger.js"
   },
   "keywords": [],
   "author": "",
